--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # To replace with your project information
-sonar.projectKey={{YOUR_PROJECT_KEY}}
-sonar.organization={{YOUR_ORGANIZATION_KEY}}
+sonar.projectKey=liz-acosta_python-flask-demo
+sonar.organization=liz-acosta
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=pokedex
